[package]
name = "impl_any"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["impl_any", "Any"]
description = "rust impl any macro for traits"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-impl_any.git"
homepage = "https://github.com/nathanfaucett/rs-impl_any"
